samples/_failures_safe/1761082589_536271_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64134468.c:90:5: error: expected expression at end of input
   90 |     {STATE_READING_WORD, 'l', STATE_READING_WORD},
      |     ^
